<resources>
    <string name="app_name">NMedia</string>
    <string name="hello_world">Hello, NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_favorites">Favorites</string>
    <string name="description_visibility">Visibility</string>
    <string name="description_share">Share</string>
    <string name="remove">Remove</string>
    <string name="post_content_hint">Post content</string>
    <string name="edit">Edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Save</string>
</resources>